--- a/Memoria/plantilla_PFC.tex
+++ b/Memoria/plantilla_PFC.tex
@@ -15,6 +15,7 @@
 \usepackage{geometry}
 \usepackage{makeidx}
 \usepackage{graphicx}
+\usepackage{placeins}
 %\usepackage{hthtml}
 \usepackage{latexsym}
 \usepackage{amssymb}
