--- a/Memoria/introduccion.tex
+++ b/Memoria/introduccion.tex
@@ -25,49 +25,214 @@ A partir de lo elaborado en la introducción, motivación y objetivos, se propone 
 
 \subsection{Requisitos funcionales}
 El módulo deberá implementar la siguiente funcionalidad
+
 \subsubsection{Botón de generación de PDF}
 Un usuario debe ser capaz de generar un documento PDF de un producto con tan sólo pulsar un botón.
+
 \subsubsection{Administración de plantillas}
 Un administrador puede acceder a una sección de administración de plantillas, protegida por privilegios especiales.
+
 \subsubsection{Creación de plantillas}
 Un administrador puede crear plantillas nuevas proporcionando un nombre de plantilla y un tipo.
+
 \subsubsection{Borrado de plantillas}
 Un administrador puede borrar plantillas antiguas para no sobrecargar la base de datos.
+
 \subsubsection{Activado de plantillas}
 Un administrador puede activar una plantilla para ser usada en la generación de PDFs.
+
 \subsubsection{Editado de plantillas}
 Un administrador puede editar las plantillas entrando en una pantalla de edición en la que se muestran diferentes opciones.
+
 \subsubsection{Mover elementos de una plantilla}
 Un administrador en modo de edición de plantilla puede mover los elementos y posicionarlos dónde desee.
+
 \subsubsection{Cambiar tamaño de elementos}
 Un administrador en modo de edición de plantilla puede cambiar el tamaño de los elementos de la misma.
+
 \subsubsection{Cambiar tamaño de fuente}
 Un administrador en modo de edición de plantilla puede cambiar el tamaño de fuente de los elementos de la misma.
+
 \subsubsection{Botón de guardar cambios de plantilla}
 Un administrador en modo de edición de plantilla puede pulsar un botón para guardar los cambios de la misma.
+
 \subsection{Requisitos no funcionales}
 El módulo deberá cumplir los siguientes requisitos no funcionales
+
 \subsubsection{Uso de tecnologías de libre distribución}
 Las tecnologías usadas para el desarrollo del módulo deben ser de libre distribución.
+
 \subsubsection{Módulo exportable}
 El módulo desarrollado debe poderse instalar en otras instalaciones de Drupal que cumplan los requisitos y dependencias.
 
-\section {Tecnologías}
-En este capítulo se enumerarán las tecnologías disponibles actualmente para la realización de éste proyecto.
+\section{Tecnologías}
+En este capítulo se enumerarán las tecnologías que se han utilizado para la realización de éste proyecto.
 
-\subsection {Lenguajes}
-\subsubsection {PHP}
-\subsubsection {HTML}
-\subsubsection {Javascript}
+\subsection{Lenguajes}
+Los lenguajes de programación usados para el desarrollo del proyecto aparecen explicados a continuación.
+
+\subsubsection{HTML}
+\begin{figure}[htb]
+	\centering{\resizebox{3cm}{3cm}{\includegraphics{HTML5.png}}}
+	\caption{Logo de HTML 5}
+\end{figure}
+\FloatBarrier
+El lenguaje Hypertext Markup Language ó HTML sirve principalmente para la publicación y estructuración de documentos y especificación de hipervínculos. Junto a CSS y Javascript, forman la base de la programación web actual. Es un lenguaje basado en etiquetas y todo el contenido de un documento está almacenado entre una etiqueta de apertura y otra de cierre.
+La primera descripción publica de HTML fue un documento llamado 'HTML Tags' publicado por Tim Berners-Lee a finales de 1991 y describe los primeros 18 elementos incluidos en el lenguaje. Durante todo este tiempo se han ido publicando nuevas versiones de HTML en las que se añadían nuevas etiquetas y se eliminaban otras obsoletas. La versión actual es HTML5 que añade múltiples etiquetas avanzadas para controles multimedia, validaciones de formularios y maquetación de páginas web optimizadas para buscadores.\\
+
+Para programar en HTML basta con usar un editor de texto cualquiera y un navegador web para su renderizado. La extensión de un documento HTML es '.html' o '.htm'.
+
+Ejemplo:
+\begin{verbatim}
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Ejemplo</title>
+  </head>
+  <body>
+    <p>¡Hola, Mundo!</p>
+  </body>
+</html>
+\end{verbatim}
+
 \subsubsection {CSS}
+\begin{figure}[htb]
+	\centering{\resizebox{4cm}{3cm}{\includegraphics{CSS3.png}}}
+	\caption{Logo de CSS 3}
+\end{figure}
+\FloatBarrier
+CSS es el acrónimo de Cascale Style Sheets el cuál es un lenguaje de estilo usado para describir la presentación de un lenguaje basado en etiquetas o marcas como HTML. Su diseño está enfocado principalmente a separar la presentación del contenido del documento, incluyendo aspectos como la estructura, colores y fuentes. Las especificaciones CSS son mantenidas por el World Wide Web Consortium (W3C).
+La primera propuesta de CSS la realizó Håkon Wium Lie en 1994 y a pesar de que en el momento habían más propuestas de lenguajes de estilo, CSS se impuso y acabó siendo lanzado en 1996 por el W3C. El lenguaje tuvo unos inicios complicados ya que los navegadores inicialmente ofrecían soporte muy limitado para CSS. No fue sino hasta la versión 5 de Internet Explorer que se dio soporte a la totalidad del lenguaje, y aun así muchos otros navegadores seguían ofreciendo compatibilidades limitadas. Actualmente la especificación CSS utilizada es la 3, aunque a partir de esta versión, el lenguaje se partió en módulos y podemos hacer uso de algunos de la especificación 4.\\
+
+Al igual que con HTML, para programar en CSS basta con un programa editor de texto y un navegador web. Es un lenguaje ligado a HTML y puede aparecer o bien incrustado en el mismo documento '.html' o bien en su propio archivo '.css' que luego es importado al documento web.
+
+Ejemplo:
+\begin{verbatim}
+body {
+  font-size: 12px;
+}
+div {
+  color: #fff;
+}
+\end{verbatim}
+
+\subsubsection {Javascript}
+\begin{figure}[htb]
+	\centering{\resizebox{3cm}{3cm}{\includegraphics{Javascript.png}}}
+	\caption{Logo de Javascript}
+\end{figure}
+\FloatBarrier
+Javascript es un lenguaje de programación de alto nivel creado originalmente en el año 1995 para ser un lenguaje de scripting complementario a los navegadores web. Inicialmente se le dio el nombre de Mocha en su fase de desarrollo, aunque luego su nombre cambió a LiveScript para más tarde ser reemplazado por Javascript en su lanzamiento junto a Netscape Navigator 2.0. Se cree que se le dio este nombre para aprovechar la popularidad de Java.
+Un año después fue adoptado por Microsoft bajo el nombre de JScript para evitar problemas legales de nomenclatura y más tarde fue estandarizado por ECMA Internacional lanzando la especificación de lenguaje ECMAScript.
+Las especificaciones de ECMAScript se han ido adaptando a los tiempos modernos, añadiendo nuevas funcionalidades y corrigiendo otras. Actualmente se trabaja mucho con la especificación ECMAScript 5, aunque la especificación 6 está ganando popularidad desde su salida en el año 2015 y sobre todo por la adopción de la misma por los desarrolladores de los frameworks y librerías más populares como Angularjs, Reactjs y Babel.\\
+
+Javascript es un lenguaje dinámico, sin tipado e interpretado en tiempo de ejecución. Es un lenguaje con múltiples paradigmas: funcional, imperativo e incluso en las últimas especificaciones, integra orientación a objetos.\\
+
+Para programar en Javascript, basta con usar un editor de texto y un navegador web, aunque para aprovechar todas sus funcionalidades, se requiere de un servidor web configurado adecuadamente, ya que, por ejemplo el acceso a archivos de la máquina podría darnos problemas.
+Es posible incrustar scripts de Javascript en un documento HTML o bien desarrollar en un documento aparte e incrustarlo posteriormente. La extensión de Javascript es '.js'.
+
+Ejemplo:
+\begin{verbatim}
+function hello() {
+  console.log("!Hola Mundo!");
+}
+\end{verbatim}
+
+\subsubsection{PHP}
+\begin{figure}[htb]
+	\centering{\resizebox{3cm}{1.6cm}{\includegraphics{PHP.png}}}
+	\caption{Logo de PHP}
+\end{figure}
+\FloatBarrier
+PHP es un lenguaje de scripting para Back-End diseñado principalmente para diseño web, pero que es utilizado también como lenguaje de propósito general. Fue creado en el año 1995 por Rasmus Lerdorf quien escribió unas aplicaciones de consola en C para mantener su página web personal. Posteriormente las amplió para funcionar con WebForms y comunicarlas con bases de datos y lo llamó "Personal Home Page/Forms Interpreter" o PHP/FI. Inicialmente no fue concebido para ser un lenguaje de programación, pero Lerdorf fue paulatinamente añadiendo funcionalidades hasta que se formó un equipo de desarrollo, lanzando su primera versión oficial en 1997.\\
+
+Durante su tiempo de vida, el lenguaje ha recibido numerosas actualizaciones. Actualmente nos encontramos en la séptima iteración de PHP, con la salida de la versión 7.2 programada para noviembre de 2017.\\
+
+Es un lenguaje orientado objetos pero que nos permite utilizar varios paradigmas de programación como el estructurado, imperativo, funcional y reflexivo.
+Como suele ocurrir con los lenguajes de scripting, PHP es un lenguaje interpretado, es decir, no requiere de compilación previa para su ejecución. Además es de tipado dinámico, por lo que las variables no están asociadas a un tipo de datos en el momento de su declaración, si no que se le asigna un tipo automáticamente en el momento de su uso.\\
+
+Para empezar a programar en PHP se requiere un servidor web capacitado para su ejecución y además los paquetes de comandos de consola requeridos para el inicio de programas escritos en este lenguaje. Un servidor muy utilizado es Apache.
+Escribir programas en PHP es sencillo y la forma más rápida consiste en incrustar pequeños scripts en los documentos HTML de nuestra web que serán interpretados por el servidor y completamente invisibles para un usuario final. Los ficheros de lenguaje PHP tienen la extensión '.php'.
+
+Ejemplo:
+\begin{verbatim}
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Ejemplo</title>
+  </head>
+  <body>
+    <?php
+      echo "¡Hola, Mundo!";
+    ?>
+  </body>
+</html>
+\end{verbatim}
+
 \subsubsection {JSON}
+\begin{figure}[htb]
+	\centering{\resizebox{3cm}{3cm}{\includegraphics{JSON.png}}}
+	\caption{Logo de JSON}
+\end{figure}
+\FloatBarrier
+JSON es el acrónimo de JavaScript Object Notation y más que un lenguaje de programación, se trata de un estándar abierto de formato de archivo para el envío de información a través de pares clave-valor. Es muy utilizado hoy en día para las comunicaciones entre cliente y servidor.
+La primera especificación de JSON vino de la mano de Douglas Crockford quien lo creó originariamente para ser un subconjunto de Javascript. De hecho es actualmente muy utilizado junto a este lenguaje, sin embargo JSON es independiente del lenguaje con el que sea usado. En el año 2013 se estableció un estándar por ECMA Internacional.\\
+
+Los tipos de datos que pueden ser usados en un documento JSON son: Boolean, String, Number, Array, Object y null.
+
+Ejemplo:
+\begin{verbatim}
+{
+  "firstName": "John",
+  "lastName": "Smith",
+  "age": 25,
+  "address": {
+    "streetAddress": "21 2nd Street",
+    "city": "New York"
+  },
+  "phoneNumbes": [
+    {
+      "type": "home",
+      "number": "212 555-1234"
+    },
+    {
+      "type": "office",
+      "number": "646 555-4567"
+    }
+  ],
+  "spouse": null
+}
+\end{verbatim}
 \subsection {Frameworks y librerías}
+En este capítulo se hace una recopilación de los frameworks y librerías de terceros usados durante el desarrollo del proyecto y sus características.
+
 \subsubsection {Drupal}
+\begin{figure}[htb]
+	\centering{\resizebox{3cm}{3cm}{\includegraphics{Drupal.png}}}
+	\caption{Logo de Drupal}
+\end{figure}
+Drupal es un sistema de gestión de contenidos (o CMS según sus siglas en inglés) de código abierto que es utilizado por un 2,3\% de sitios web del mundo. Es un sistema libre, modular y multipropósito que permite publicar artículos, imágenes, archivos y que también ofrece la posibilidad de otros servicios añadidos como foros, encuestas, votaciones, blogs y administración de usuarios y permisos. Es un sistema de carga dinámico, es decir, todos los recursos se almacenan en una base de datos y se cargan en tiempo real a la hora de generar una página. Este CMS está escrito utilizando el lenguaje PHP valiéndose de las librerías de Symfony, por lo que es un sistema multiplataforma soportado tanto por Windows como por sistemas Unix.\\
+
+Originalmente fue escrito por Dries Buytaert como un foro de opinión. En el año 2001 se convirtió en un proyecto de código abierto y ganó popularidad en 2004 al utilizarse para crear el sitio 'DeanSpace' para el candidato a las primarias por el Partido Demócrata de Estados Unidos Howard Dean.\\
+
+Actualmente Drupal se encuentra en la versión 8, aunque aún brinda soporte a la versión 7 que cuenta con muchos adeptos. La mayoría de los módulos y temas de Drupal desarrollados por sus usuarios son compatibles con la versión 7.\\
+
+Algunos ejemplos de sitios desarrollados con Drupal son las webs de Ubuntu, Intel o Economist.
+
 \subsubsection {Angularjs}
 \subsubsection {jQuery}
 \subsubsection {JsPDF}
+JsPDF es una librería Javascript para la generación de PDFs en el lado del cliente. Cuenta con un potente motor para dibujar elementos geométricos, incrustar imágenes y textos variando el tipo de letra y el tamaño. Su primera versión fue lanzada en el año 2012 y desde entonces sus creadores (Parallax) han ido incorporando funcionalidades y librerías para aumentar sus capacidades.
+
 \subsubsection {Dragabilly}
+Se trata de una librería creada para JQuery que permite utilizar las características de Drag and Drop en una página web. La ventaja que nos ofrece es que podemos mover un elemento web a cualquier punto de un contenedor.
+Cuenta con un wrapper para Angularjs que nos permite añadirlo como una directiva para ser usado directamente sin necesidad de JQuery.
+En el proyecto es usado para mover los elementos de una plantilla PDF.
+
 \subsubsection {Html2Canvas}
+Html2Canvas es una librería Javascript para la conversión de código HTML al objeto Canvas de HTML5. Este objeto permite renderizar la página web con todos sus estilos y guardarla como si fuera una imagen.
+Al ser compatible con JsPDF nos permite la generación de un documento PDF en modo imagen tal y como se muestra en la web y sin los problemas derivados de los estilos css de impresión.
+
 \subsection {Sistemas}
 \subsubsection {Apache}
 \subsubsection {MySQL}
