Added sections in technologies

--- a/Memoria/introduccion.tex
+++ b/Memoria/introduccion.tex
@@ -238,6 +238,30 @@ Al ser compatible con JsPDF nos permite la generación de un documento PDF en mod
 \subsubsection {MySQL}
 \subsection {Herramientas de desarrollo}
 \subsubsection {Brackets}
+Brackets es un editor de texto avanzado escrito en HTML, CSS y Javascript por Adobe Systems y que está orientado al desarrollo web. A diferencia de otros editores, contiene un pequeño servidor Nodejs para probar el código realizado en el momento. Es capaz de mostrar un correcto formato de múltiples lenguajes de programación como Javascript, PHP, Java, HTML y CSS entre otros. Es un programa de libre distribución y sus desarrolladores han publicado una API con la que se pueden desarrollar módulos para aumentar su funcionalidad.
+Su interfaz es sencilla, con una lista de archivos abiertos a la izquierda y espacio para escribir a la derecha ocupando el máximo espacio posible de la ventana.
+Sus principales características son:
+\begin{list_type}  
+\item Edición rápida
+\item Acceso a archivos de forma rápida
+\item Previsualización en tiempo real
+\item JSLint
+\item Soporte para LESS
+\item Integración con Theseus
+\item Extensible
+\end{list_type}
+
 \subsubsection {Git}
+Es un sistema de control de versiones cuya función principal es la de mantener un registro de cambios locales realizados en un directorio y coordinar el trabajo sobre esos archivos entre un grupo de gente. Se usa mayoritariamente como gestión de código a la hora de desarrollar software de manera distribuida.
+Fue creado por Linus Torvalds en el año 2005 para el desarrollo del kernel de Linux con la finalidad de coordinar el trabajo con otros desarrolladores. A Torvalds no le convencían otros sistemas de control de versiones disponibles.
+Una de las características de Git es que cada directorio de Git en cada ordenador es un repositorio completo con histórico y rastreo de versiones independiente de cualquier servidor central. Esto hace posible que, en caso de perderse el repositorio remoto, este se pueda rehacer desde uno perteneciente a los desarrolladores.
+Sus principales características son:
+\begin{list_type}  
+\item Soporte para desarrollo no lineal
+\item Desarrollo distribuido
+\item Compatibilidad con varios protocolos de comunicaciones, como HTTP, FTP o SSH
+\item Manejo eficiente de proyectos grandes
+\end{list_type}
+
 \subsubsection {Bower}
 \subsubsection {Nodejs}
