Added sections in technologies

--- a/Memoria/introduccion.tex
+++ b/Memoria/introduccion.tex
@@ -237,6 +237,7 @@ Al ser compatible con JsPDF nos permite la generación de un documento PDF en mod
 \subsubsection {Apache}
 \subsubsection {MySQL}
 \subsection {Herramientas de desarrollo}
+Las herramientas de desarrollo nos sirven para facilitarnos la vida a la hora de programar y gestionar recursos. A continuación se describen las principales herramientas usadas en el proyecto.
 \subsubsection {Brackets}
 Brackets es un editor de texto avanzado escrito en HTML, CSS y Javascript por Adobe Systems y que está orientado al desarrollo web. A diferencia de otros editores, contiene un pequeño servidor Nodejs para probar el código realizado en el momento. Es capaz de mostrar un correcto formato de múltiples lenguajes de programación como Javascript, PHP, Java, HTML y CSS entre otros. Es un programa de libre distribución y sus desarrolladores han publicado una API con la que se pueden desarrollar módulos para aumentar su funcionalidad.
 Su interfaz es sencilla, con una lista de archivos abiertos a la izquierda y espacio para escribir a la derecha ocupando el máximo espacio posible de la ventana.
@@ -263,5 +264,7 @@ Sus principales características son:
 \item Manejo eficiente de proyectos grandes
 \end{list_type}
 
-\subsubsection {Bower}
 \subsubsection {Nodejs}
+\subsubsection {Bower}
+Bower es una herramienta de gestión de dependencias utilizado principalmente para gestionar componentes HTML, CSS y Javascript y obtener las últimas versiones de los mismos con tan sólo usar un comando de consola. Para instalar Bower, se requiere tener instalado previamente Nodejs, npm y git.
+La forma más sencilla de instalar un nuevo paquete es buscar en internet el paquete que deseemos y posteriormente ejecutar en una consola de comandos 'bower install <nombre_paquete>'. También es posible tener un archivo llamado bower.json en el que se guardan todas las dependencias de nuestro proyecto (con nombre de paquete y versión), de esta forma al ejecutar 'bower install', se instalaran todos los paquetes de nuestro fichero, en la versión especificada. Es posible también utilizar sentencias condicionales en las versiones.
