Added sections in technologies

--- a/Memoria/introduccion.tex
+++ b/Memoria/introduccion.tex
@@ -228,7 +228,26 @@ El framework se basa en el modelo vista presentador con lo que nos brinda ficher
 
 En este proyecto se usa la versión 1.6 del framework. Algunos sitios desarrollados con Angular son Wolfram Alpha, ABC News ó NBC
 
-\subsubsection {jQuery}
+\subsubsection {JQuery}
+Es una librería de Javascript diseñada para simplificar la programación en el lado del cliente. Es de código abierto y es la librería más usada de Javascript. Fue lanzado en el año 2006 por John Resig quien se inspiró en las librerías de cssQuery.\\
+
+Principalmente contiene funciones para manipular el DOM, realizar animaciones, gestionar eventos y desarrollar aplicaciones basadas en Ajax. Sus principales características son las siguientes:
+\begin{list_type}  
+\item Selección de elementos DOM
+\item Interactividad y modificaciones del árbol DOM, incluyendo soporte para CSS 1-3 y un plugin básico de XPath
+\item Eventos
+\item Manipulación de la hoja de estilos CSS
+\item Efectos y animaciones
+\item AJAX
+\item Soporte de extensiones
+\end{list_type}
+
+Ejemplo: 
+\begin{verbatim}
+$(document).ready(function() {
+  console.log('¡Hola Mundo!');
+});
+\end{verbatim}
 \subsubsection {JsPDF}
 JsPDF es una librería Javascript para la generación de PDFs en el lado del cliente. Cuenta con un potente motor para dibujar elementos geométricos, incrustar imágenes y textos variando el tipo de letra y el tamaño. Su primera versión fue lanzada en el año 2012 y desde entonces sus creadores (Parallax) han ido incorporando funcionalidades y librerías para aumentar sus capacidades.
 
