nueva funcionalidad de plantillas de catalogos

--- a/Memoria/metodologia.tex
+++ b/Memoria/metodologia.tex
@@ -1,3 +1,58 @@
-\chapter{Metodología}
-Basándose en artículos, libros, etc. que se os haya facilitado y
-de otros que estiméis oportuno, se hablará de:
+\chapter{Metodologías de desarrollo software}
+Una metodología de desarrollo software, es un framework utilizado para estructurar, planificar y controlar el proceso de desarrollo de software. Tanto escogiendo metodologías tradicionales o ligeras, de su correcta implantación en el proyecto dependerá mucho el éxito o fracaso del mismo.
+
+\section{¿Por qué usar metodologías?}
+Hoy en día el número de empresas y proyectos que fallan en su ejecución por una mala gestión es muy alto, un gran número de proyectos son ejecutados sin usar una metodología clara. Esto es debido, en numerosas ocasiones, a que el cliente encuentra dificultad a la hora de ver el valor inmediato de los requerimientos del negocio, análisis de casos de uso y especificaciones de diseño que se requieren para generar un producto de calidad. En vez de eso, sienten que pueden simplemente decir lo que desean y que los desarrolladores serán capaces de dárselo sin hacer preguntas adicionales. Sin una metodología clara, los proyectos se suelen entregar tarde, con sobrecostes, y en muchos casos sin alcanzar las expectativas del cliente o del usuario final. Puede incluso llevar al fracaso del proyecto.\\ 
+
+Algunas de las ventajas de implantar una metodología bien definida son las siguiente:
+\begin{itemize}  
+	\item Permite realizar mejores estimaciones
+	\item Entregar sistemas estables
+	\item Mantener al usuario informado
+	\item Preveer futuras tareas
+	\item Gestión del riesgo identificando posibles problemas
+	\item Mejor gestión de tiempo
+\end{itemize}
+
+Cuando una metodología no se implementa correctamente, pueden surgir numerosos problemas. Por ejemplo, una pérdida de comunicación entre el cliente y el equipo de desarrollo lleva a desarrollas sistemas que no cumplen las expectativas del cliente. Además el mal uso de conceptos o procesos de una metodología de desarrollo conduce a menudo a desarrollar sistemas con numerosos defectos.\\
+
+Por otro lado, la calidad de vida del equipo humano también se ve afectada por la falta de uso de metodologías. Muchos desarrolladores sufren de falta de moral y motivación a causa de los continuos cambios de alcance o parches debidos a la falta de definición en las tareas. Por el contrario, usando los procesos de desarrollo adecuados, se puede gestionar debidamente el alcance de un proyecto y evitar muchos problemas comunes de desarrollo software. Siempre ocurrirán imprevistos, pero con una metodología adecuada, estos son de poco impacto y mínima ocurrencia.\\
+
+No todas la metodologías de desarrollo funcionan con todos los proyectos. Elegir la adecuada también es uno de los retos que tienen que afrontar los desarrolladores. Algunas metodologías funcionan mejor con proyectos grandes y de larga duración, y otras son más adecuadas para proyectos medianos y pequeños con equipos de desarrollo más modestos. Sin embargo es un hecho que, aplicar una metodología de desarrollo a un proyecto, aumenta mucho las posibilidades de que termine con éxito.
+
+\section{Metodologías tradicionales vs ágiles}
+Dentro de las metodologías de desarrollo software, podemos encontrar una división entre metodologías tradicionales (o metodologías pesadas) y metodologías ágiles.\\
+
+Las metodologías de desarrollo tradicionales se caracterizan por tener una serie secuencial de fases: requisitos, análisis, diseño, implementación, pruebas y despliegue. Primero, los requisitos del cliente son meticulosamente documentados. Después se analiza y diseña la arquitectura general del software y en la siguiente fase comienza la implementación, finalizando con el período de pruebas y el despliegue. La idea principal es tener una visión completa del proyecto antes de su inicio y realizar la implementación de acuerdo al esquema planificado.\\
+\begin{itemize}  
+	\item Desarrollo Predictivo
+	\item Las decisiones se toman en las primeras fases del ciclo de vida y se especifican mediante modelos gráficos
+	\item Las decisiones se interpretan y materializan en la fase de desarrollo
+	\item Orientado a la documentación
+	\item Orientado al proceso
+\end{itemize}
+
+Las metodologías ágiles son menos rigurosas a la hora de gestionar la documentanción. La clave reside en que el desarrollo se realiza de manera incremental e iterativa, en la que las fases de diseño se ejecutan una y otra vez. Como resultado, el software deja ser ser tan rígido para convertirse en una estructura más orgánica con mayor interactividad entre sus componentes. Se le da mayor importancia a la adaptabilidad y a las pruebas de integración.
+\begin{itemize}  
+	\item Preparado para soportar cambios
+	\item Desarrollo iterativo
+	\item Pruebas de integración
+	\item Orientado al código
+	\item Orientado a las personas
+\end{itemize}
+
+\begin{center}
+	\begin{tabular}{ | p{7cm} || p{7cm} |}
+		\hline
+		TRADICIONALES & ÁGILES \\ \hline
+		Proceso secuencial & Proceso iterativo e incremental. Fases en paralelo \\ \hline
+		Estructurado & Flexible. Adaptable. Mejora continua \\ \hline
+		Grandes y pocas entregas de software & Entregas pequeñas y frecuentes de software, que siempre aportan valor \\ \hline
+		Un gran proyecto & Muchos pequeños proyectos \\ \hline
+		Adecuado para situaciones donde los cambios no son frecuentes & Adecuado cuando el usuario no conoce al detalle todas las necesidades al principio, y, además, serán cambiantes \\ \hline
+		El usuario participa fundamentalmente en la fase inicial de toma de requisitos & El usuario está involucrado constantemente en el proyecto. Comunicación fluida \\ \hline
+		Buena definición de requisitos al principio & Los requisitos se van desgranando cuando se van a abordar \\ \hline
+		Plazos y costes son conocidos al principio & Ámbito y costes varían según evoluciona el proyecto \\ \hline
+		Proyecto bien documentado & La documentación no es prioritaria \\ \hline
+	\end{tabular}
+\end{center}
